--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 tokio = { version = "1.27.0", features = ["full"] }
 # libsqlite3-sys = { version="0.22.0", features = ["min_sqlite_version_3_7_16", "bundled"] }
+
+[lib]
+path = "src/lib.rs"
